[gd_scene load_steps=3 format=3 uid="uid://dfefqyvnua6"]

[ext_resource type="Script" path="res://Menus/main_menu.gd" id="1_4nxe0"]
[ext_resource type="FontFile" uid="uid://dibh2m6e6wqpq" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="2_v0aiv"]

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4nxe0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 720.0
offset_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_v0aiv")
theme_override_font_sizes/font_size = 30
text = "Start"

[node name="Load" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_v0aiv")
theme_override_font_sizes/font_size = 30
text = "Load"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_v0aiv")
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_v0aiv")
theme_override_font_sizes/font_size = 30
text = "Credits"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_v0aiv")
theme_override_font_sizes/font_size = 30
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
